--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,13 @@ google-generativeai==0.8.5
 googleapis-common-protos==1.70.0
 grpcio==1.74.0
 grpcio-status==1.71.2
+h11==0.16.0
+httpcore==1.0.9
 httplib2==0.30.0
+httptools==0.6.4
+httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 Jinja2==3.1.6
 jsonschema==4.25.1
 jsonschema-specifications==2025.4.1
@@ -34,6 +39,7 @@ numpy==2.3.2
 packaging==25.0
 pandas==2.3.2
 pillow==11.3.0
+pluggy==1.6.0
 proto-plus==1.26.1
 protobuf==5.29.5
 pyarrow==21.0.0
@@ -42,10 +48,13 @@ pyasn1_modules==0.4.2
 pydantic==2.11.7
 pydantic_core==2.33.2
 pydeck==0.9.1
+Pygments==2.19.2
 pyparsing==3.2.3
+pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
+PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.5
 rpds-py==0.27.1
@@ -65,4 +74,7 @@ typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
+uvicorn==0.35.0
 watchdog==6.0.0
+watchfiles==1.1.0
+websockets==15.0.1
